# prune-envs

./: CHANGELOG.md  README.md  pyproject.toml
src/prune_envs/: app.css  app.py  app.tcss  conda.py
